# Personal-Ai-Assistant

./: .gitignore  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  Jarvis.spec  Jarvis_Setup.iss  README.md  SECURITY.md  SUPPORTED_VERSIONS.md  THIRD_PARTY_LICENSES.md  build.bat  clean.bat  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.ps1  setup.py  ui.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
actions/: browser_control.py  computer_settings.py  screen_processor.py
config/: api_keys.json.example
core/: exceptions.py  logger.py  resource_manager.py  security.py
dashboard/: server.py
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  DEVELOPMENT.md  USER_GUIDE.md
scripts/: build_release.py  setup_env.py
src/jarvis/: __init__.py  __main__.py  main.py  ui.py
src/jarvis/actions/: code_helper.py  file_controller.py  flight_finder.py  game_updater.py  proactive.py
src/jarvis/core/: installer.py  llm_client.py  logger.py  prompt.txt  resource_manager.py  security.py  stt.py  tts.py
src/jarvis/dashboard/: server.py
src/jarvis/memory/: config_manager.py  memory_manager.py
tests/: conftest.py  test_config_manager.py  test_memory_manager.py  test_security.py
tests/unit/: test_config_manager.py  test_memory_manager.py  test_security.py
