[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai"
version = "1.0.0"
description = "Real-Time Personal AI Assistant powered by Gemini Live API"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ankit Paul", email = "ankitpaul6201@gmail.com" }
]
license = { text = "MIT" }

[project.scripts]
jarvis = "jarvis.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E701",
    "F541",
    "W291",
    "W292",
    "W293",
    "E401",
    "E402",
    "E501",
    "F401",
    "F841",
    "F811",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["src", "src/jarvis"]
